force-app/main/default/objects/SubStructure__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comune</label>
    <referenceTo>Comune__c</referenceTo>
    <relationshipName>Structures</relationshipName>
    <type>Lookup</type>
</CustomField>